RESOLVED FIXED39772
[Qt] LoggingQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39772
Summary [Qt] LoggingQt.cpp has coding-style errors
Anders Bakken
Reported 2010-05-26 13:33:54 PDT
WebCore/platform/qt/LoggingQt.cpp:21: You should add a blank line after implementation file's own header. [build/include_order] [4] Total errors found: 1 in 1 files
Attachments
Patch that fixes the coding style issues (911 bytes, patch)
2010-05-26 14:38 PDT, Anders Bakken
no flags
Patch (965 bytes, patch)
2010-06-04 20:15 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-05-26 14:38:55 PDT
Created attachment 57152 [details] Patch that fixes the coding style issues
Petri Ojala
Comment 2 2010-05-26 21:49:03 PDT
Qt, QtTriaged
David Levin
Comment 3 2010-05-27 11:16:59 PDT
Comment on attachment 57152 [details] Patch that fixes the coding style issues > No new tests. (OOPS!) Ditto.
Anders Bakken
Comment 4 2010-06-04 20:15:17 PDT
WebKit Commit Bot
Comment 5 2010-06-05 03:12:43 PDT
Comment on attachment 57949 [details] Patch Clearing flags on attachment: 57949 Committed r60745: <http://trac.webkit.org/changeset/60745>
WebKit Commit Bot
Comment 6 2010-06-05 03:12:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.