third_party/WebKit/WebCore/platform/qt/LoggingQt.cpp
@@ -20,8 +20,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "config.h"
 #include "Logging.h"
-#include "PlatformString.h"
 
+#include "PlatformString.h"
 #include <QDebug>
 #include <QStringList>
 
